--- a/03-PO33Q.html
+++ b/03-PO33Q.html
@@ -86,7 +86,7 @@ div.csl-indent {
 <meta name="quarto:offset" content="./">
 <link href="./04-PO33Q.html" rel="next">
 <link href="./02-PO33Q.html" rel="prev">
-<link href="./images/Crest_white.png" rel="icon" type="image/png">
+<link href="./images/favicon-32.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -835,8 +835,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <script>
 
-      function styleCell_zkyn1h7zsckpj0l5d52l(i, j, css_id) {
-          var table = document.getElementById("tinytable_zkyn1h7zsckpj0l5d52l");
+      function styleCell_q3el0ax6byh3l0mru8it(i, j, css_id) {
+          var table = document.getElementById("tinytable_q3el0ax6byh3l0mru8it");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -845,8 +845,8 @@ Number of Fisher Scoring iterations: 5</code></pre>
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_zkyn1h7zsckpj0l5d52l(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_zkyn1h7zsckpj0l5d52l");
+      function spanCell_q3el0ax6byh3l0mru8it(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_q3el0ax6byh3l0mru8it");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -877,20 +877,20 @@ Number of Fisher Scoring iterations: 5</code></pre>
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_tj3elmzjag8neireqvr7',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_clrzsw0ybgqac3e7nyow',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_ejdizvu97pxyfcge8uv7',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_qjm4hq9zlhuxsg0gas93',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_rtgahohmwiwtu1apk4nu',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_11cqtsmr21s2reqv7jzk',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_5b0k0ajtoy67s3hgxpar',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_6v088qbapw2jepk3xilr',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_7sj14tsqt8lybolax5yp',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_d96fzoyadkbgp2mcrwn1',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_9d2op17olner7qgy719t',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_w0mis3levrxx23i0sjai',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_9i86he09czzie5souc5u',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_z9shphw8pdxebem01lyu',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_cqwm3opebxh5mumr42qj',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_shxvybhg973st705d1ot',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_zkyn1h7zsckpj0l5d52l(cell.i, cell.j, group.css_id);
+                  styleCell_q3el0ax6byh3l0mru8it(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -898,17 +898,17 @@ Number of Fisher Scoring iterations: 5</code></pre>
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_tj3elmzjag8neireqvr7, .table th.tinytable_css_tj3elmzjag8neireqvr7 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_clrzsw0ybgqac3e7nyow, .table th.tinytable_css_clrzsw0ybgqac3e7nyow { text-align: center; }
-      .table td.tinytable_css_ejdizvu97pxyfcge8uv7, .table th.tinytable_css_ejdizvu97pxyfcge8uv7 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qjm4hq9zlhuxsg0gas93, .table th.tinytable_css_qjm4hq9zlhuxsg0gas93 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_rtgahohmwiwtu1apk4nu, .table th.tinytable_css_rtgahohmwiwtu1apk4nu { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_11cqtsmr21s2reqv7jzk, .table th.tinytable_css_11cqtsmr21s2reqv7jzk { text-align: left; }
-      .table td.tinytable_css_5b0k0ajtoy67s3hgxpar, .table th.tinytable_css_5b0k0ajtoy67s3hgxpar { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_6v088qbapw2jepk3xilr, .table th.tinytable_css_6v088qbapw2jepk3xilr { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_7sj14tsqt8lybolax5yp, .table th.tinytable_css_7sj14tsqt8lybolax5yp { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_d96fzoyadkbgp2mcrwn1, .table th.tinytable_css_d96fzoyadkbgp2mcrwn1 { text-align: center; }
+      .table td.tinytable_css_9d2op17olner7qgy719t, .table th.tinytable_css_9d2op17olner7qgy719t { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_w0mis3levrxx23i0sjai, .table th.tinytable_css_w0mis3levrxx23i0sjai { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_9i86he09czzie5souc5u, .table th.tinytable_css_9i86he09czzie5souc5u { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_z9shphw8pdxebem01lyu, .table th.tinytable_css_z9shphw8pdxebem01lyu { text-align: left; }
+      .table td.tinytable_css_cqwm3opebxh5mumr42qj, .table th.tinytable_css_cqwm3opebxh5mumr42qj { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_shxvybhg973st705d1ot, .table th.tinytable_css_shxvybhg973st705d1ot { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_zkyn1h7zsckpj0l5d52l" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_q3el0ax6byh3l0mru8it" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
@@ -1012,8 +1012,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <script>
 
-      function styleCell_ywwm6j4axaiqalphlmoa(i, j, css_id) {
-          var table = document.getElementById("tinytable_ywwm6j4axaiqalphlmoa");
+      function styleCell_zokqloa03o0myt9xuup8(i, j, css_id) {
+          var table = document.getElementById("tinytable_zokqloa03o0myt9xuup8");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1022,8 +1022,8 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_ywwm6j4axaiqalphlmoa(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_ywwm6j4axaiqalphlmoa");
+      function spanCell_zokqloa03o0myt9xuup8(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_zokqloa03o0myt9xuup8");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1054,20 +1054,20 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_1h1k1f6k00bmrxqzu4sp',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_mx738v9sq9ppp73ikr1y',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_otvm8vcvkg99x4329p3e',}, 
-          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_0nc2ixnr96jne6vefpzp',}, 
-          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_0casc2z3ahn6u9ckxmmu',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_zvy8grxmxh9dws072g2b',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_ho029c2u9eoupglutzyn',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_7tcaj86bh8n2k13ce7ig',}, 
+          { positions: [ { i: '4', j: 1 },  ], css_id: 'tinytable_css_3ecbgshjiit9olurqx6z',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '3', j: 1 },  ], css_id: 'tinytable_css_0a6838kaya491osz43ey',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_86uzc9aptxli18sdzkwj',}, 
+          { positions: [ { i: '0', j: 1 },  ], css_id: 'tinytable_css_c2w5qjebwgi9ek3iu0oz',}, 
+          { positions: [ { i: '4', j: 0 },  ], css_id: 'tinytable_css_3qhmr5n09sk89224v4iu',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 },  ], css_id: 'tinytable_css_n1pj349l42wl5lu8hxwm',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_davagvr54cj1aktwgkzg',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_zjmr28wbt6y7rltr3swm',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_ywwm6j4axaiqalphlmoa(cell.i, cell.j, group.css_id);
+                  styleCell_zokqloa03o0myt9xuup8(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1075,17 +1075,17 @@ Table&nbsp;1: Influence of per capita GDP on Democracy
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_1h1k1f6k00bmrxqzu4sp, .table th.tinytable_css_1h1k1f6k00bmrxqzu4sp { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_mx738v9sq9ppp73ikr1y, .table th.tinytable_css_mx738v9sq9ppp73ikr1y { text-align: center; }
-      .table td.tinytable_css_otvm8vcvkg99x4329p3e, .table th.tinytable_css_otvm8vcvkg99x4329p3e { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_0nc2ixnr96jne6vefpzp, .table th.tinytable_css_0nc2ixnr96jne6vefpzp { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_0casc2z3ahn6u9ckxmmu, .table th.tinytable_css_0casc2z3ahn6u9ckxmmu { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_zvy8grxmxh9dws072g2b, .table th.tinytable_css_zvy8grxmxh9dws072g2b { text-align: left; }
-      .table td.tinytable_css_ho029c2u9eoupglutzyn, .table th.tinytable_css_ho029c2u9eoupglutzyn { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_7tcaj86bh8n2k13ce7ig, .table th.tinytable_css_7tcaj86bh8n2k13ce7ig { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_3ecbgshjiit9olurqx6z, .table th.tinytable_css_3ecbgshjiit9olurqx6z { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_0a6838kaya491osz43ey, .table th.tinytable_css_0a6838kaya491osz43ey { text-align: center; }
+      .table td.tinytable_css_86uzc9aptxli18sdzkwj, .table th.tinytable_css_86uzc9aptxli18sdzkwj { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_c2w5qjebwgi9ek3iu0oz, .table th.tinytable_css_c2w5qjebwgi9ek3iu0oz { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_3qhmr5n09sk89224v4iu, .table th.tinytable_css_3qhmr5n09sk89224v4iu { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_n1pj349l42wl5lu8hxwm, .table th.tinytable_css_n1pj349l42wl5lu8hxwm { text-align: left; }
+      .table td.tinytable_css_davagvr54cj1aktwgkzg, .table th.tinytable_css_davagvr54cj1aktwgkzg { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_zjmr28wbt6y7rltr3swm, .table th.tinytable_css_zjmr28wbt6y7rltr3swm { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_ywwm6j4axaiqalphlmoa" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_zokqloa03o0myt9xuup8" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
