--- a/07-PO33Q.html
+++ b/07-PO33Q.html
@@ -86,7 +86,7 @@ div.csl-indent {
 <meta name="quarto:offset" content="./">
 <link href="./08-PO33Q.html" rel="next">
 <link href="./05-PO33Q.html" rel="prev">
-<link href="./images/Crest_white.png" rel="icon" type="image/png">
+<link href="./images/favicon-32.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -1679,8 +1679,8 @@ Figure&nbsp;6: ROC Curve
 
     <script>
 
-      function styleCell_byolkrc91wift3jlg0vg(i, j, css_id) {
-          var table = document.getElementById("tinytable_byolkrc91wift3jlg0vg");
+      function styleCell_a14l5vkh38biul3dfpgd(i, j, css_id) {
+          var table = document.getElementById("tinytable_a14l5vkh38biul3dfpgd");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1689,8 +1689,8 @@ Figure&nbsp;6: ROC Curve
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_byolkrc91wift3jlg0vg(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_byolkrc91wift3jlg0vg");
+      function spanCell_a14l5vkh38biul3dfpgd(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_a14l5vkh38biul3dfpgd");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -1721,26 +1721,26 @@ Figure&nbsp;6: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_xosr408xmair6o9rjn5p',}, 
-          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_jkyxp058tit5tdx5w6xq',}, 
-          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_rkea8ewk8xhb2krk94ft',}, 
-          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_ysdlmifr3n8nafh35af4',}, 
-          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_e15f90bd9nw4v6d654gr',}, 
-          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_ti3nqrju26z6en6zl6tg',}, 
-          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_fwmlp889qw3yrtriaxvy',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_fduhelm4i1nxsap2fwzy',}, 
-          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_aj32g6t6kaiqvxiksnhp',}, 
-          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_m13om10scd8d27ejaz93',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_go55zmfm5k9x2hytomny',}, 
-          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_h2w50nni8duidvrfy5gs',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_nhtrns8azdlb2yjid99g',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_1uynds26x4jzab85muo1',}, 
+          { positions: [ { i: '-1', j: 4 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_147lyvhyf23hjlmup1h9',}, 
+          { positions: [ { i: '-2', j: 3 }, { i: '-2', j: 2 }, { i: '-2', j: 4 },  ], css_id: 'tinytable_css_gvdx21iuptslbi5v9h8u',}, 
+          { positions: [ { i: '10', j: 1 }, { i: '10', j: 4 }, { i: '10', j: 2 }, { i: '10', j: 3 },  ], css_id: 'tinytable_css_vr897ba69yu7i2qdaxgd',}, 
+          { positions: [ { i: '8', j: 3 }, { i: '8', j: 2 }, { i: '8', j: 4 }, { i: '8', j: 1 },  ], css_id: 'tinytable_css_qiq76cwqg57ci5yftzt0',}, 
+          { positions: [ { i: '2', j: 1 }, { i: '1', j: 1 }, { i: '6', j: 1 }, { i: '3', j: 1 }, { i: '5', j: 1 }, { i: '1', j: 2 }, { i: '7', j: 1 }, { i: '4', j: 1 }, { i: '9', j: 1 }, { i: '5', j: 2 }, { i: '2', j: 2 }, { i: '3', j: 2 }, { i: '4', j: 2 }, { i: '9', j: 2 }, { i: '6', j: 2 }, { i: '7', j: 2 }, { i: '3', j: 3 }, { i: '4', j: 3 }, { i: '1', j: 3 }, { i: '2', j: 3 }, { i: '7', j: 3 }, { i: '3', j: 4 }, { i: '5', j: 3 }, { i: '6', j: 3 }, { i: '2', j: 4 }, { i: '7', j: 4 }, { i: '9', j: 3 }, { i: '1', j: 4 }, { i: '6', j: 4 }, { i: '4', j: 4 }, { i: '5', j: 4 }, { i: '9', j: 4 },  ], css_id: 'tinytable_css_g3e5bwzgbilx6fqf4q5s',}, 
+          { positions: [ { i: '-2', j: 1 },  ], css_id: 'tinytable_css_5z61pr98xahy9sxach4b',}, 
+          { positions: [ { i: '-1', j: 1 }, { i: '-1', j: 2 },  ], css_id: 'tinytable_css_naiutyxyqm5fps34iitr',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 }, { i: '0', j: 4 },  ], css_id: 'tinytable_css_oc588odpefk040wy2n3b',}, 
+          { positions: [ { i: '10', j: 0 },  ], css_id: 'tinytable_css_gmmceqxb1whi0pitzuoi',}, 
+          { positions: [ { i: '8', j: 0 },  ], css_id: 'tinytable_css_uidbnmwivkyoqpytemvd',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 }, { i: '6', j: 0 }, { i: '7', j: 0 }, { i: '9', j: 0 },  ], css_id: 'tinytable_css_4ky32cho7gry7k66piok',}, 
+          { positions: [ { i: '-2', j: 0 },  ], css_id: 'tinytable_css_o6v070hlx4fvboat1nzy',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_qfdg11p5o40jhp105fwt',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_rdr0gt6gdr2oyxr83kaj',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_byolkrc91wift3jlg0vg(cell.i, cell.j, group.css_id);
+                  styleCell_a14l5vkh38biul3dfpgd(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -1748,23 +1748,23 @@ Figure&nbsp;6: ROC Curve
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_xosr408xmair6o9rjn5p, .table th.tinytable_css_xosr408xmair6o9rjn5p { text-align: center; text-align: center; }
-      .table td.tinytable_css_jkyxp058tit5tdx5w6xq, .table th.tinytable_css_jkyxp058tit5tdx5w6xq { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_rkea8ewk8xhb2krk94ft, .table th.tinytable_css_rkea8ewk8xhb2krk94ft { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ysdlmifr3n8nafh35af4, .table th.tinytable_css_ysdlmifr3n8nafh35af4 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_e15f90bd9nw4v6d654gr, .table th.tinytable_css_e15f90bd9nw4v6d654gr { text-align: center; }
-      .table td.tinytable_css_ti3nqrju26z6en6zl6tg, .table th.tinytable_css_ti3nqrju26z6en6zl6tg { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_fwmlp889qw3yrtriaxvy, .table th.tinytable_css_fwmlp889qw3yrtriaxvy { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_fduhelm4i1nxsap2fwzy, .table th.tinytable_css_fduhelm4i1nxsap2fwzy { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_aj32g6t6kaiqvxiksnhp, .table th.tinytable_css_aj32g6t6kaiqvxiksnhp { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_m13om10scd8d27ejaz93, .table th.tinytable_css_m13om10scd8d27ejaz93 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_go55zmfm5k9x2hytomny, .table th.tinytable_css_go55zmfm5k9x2hytomny { text-align: left; }
-      .table td.tinytable_css_h2w50nni8duidvrfy5gs, .table th.tinytable_css_h2w50nni8duidvrfy5gs { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_nhtrns8azdlb2yjid99g, .table th.tinytable_css_nhtrns8azdlb2yjid99g { text-align: left; text-align: center; }
-      .table td.tinytable_css_1uynds26x4jzab85muo1, .table th.tinytable_css_1uynds26x4jzab85muo1 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_147lyvhyf23hjlmup1h9, .table th.tinytable_css_147lyvhyf23hjlmup1h9 { text-align: center; text-align: center; }
+      .table td.tinytable_css_gvdx21iuptslbi5v9h8u, .table th.tinytable_css_gvdx21iuptslbi5v9h8u { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_vr897ba69yu7i2qdaxgd, .table th.tinytable_css_vr897ba69yu7i2qdaxgd { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_qiq76cwqg57ci5yftzt0, .table th.tinytable_css_qiq76cwqg57ci5yftzt0 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_g3e5bwzgbilx6fqf4q5s, .table th.tinytable_css_g3e5bwzgbilx6fqf4q5s { text-align: center; }
+      .table td.tinytable_css_5z61pr98xahy9sxach4b, .table th.tinytable_css_5z61pr98xahy9sxach4b { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_naiutyxyqm5fps34iitr, .table th.tinytable_css_naiutyxyqm5fps34iitr { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_oc588odpefk040wy2n3b, .table th.tinytable_css_oc588odpefk040wy2n3b { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_gmmceqxb1whi0pitzuoi, .table th.tinytable_css_gmmceqxb1whi0pitzuoi { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_uidbnmwivkyoqpytemvd, .table th.tinytable_css_uidbnmwivkyoqpytemvd { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_4ky32cho7gry7k66piok, .table th.tinytable_css_4ky32cho7gry7k66piok { text-align: left; }
+      .table td.tinytable_css_o6v070hlx4fvboat1nzy, .table th.tinytable_css_o6v070hlx4fvboat1nzy { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_qfdg11p5o40jhp105fwt, .table th.tinytable_css_qfdg11p5o40jhp105fwt { text-align: left; text-align: center; }
+      .table td.tinytable_css_rdr0gt6gdr2oyxr83kaj, .table th.tinytable_css_rdr0gt6gdr2oyxr83kaj { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_byolkrc91wift3jlg0vg" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_a14l5vkh38biul3dfpgd" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-2" data-col="0"> </th>
