--- a/04-PO33Q.html
+++ b/04-PO33Q.html
@@ -51,7 +51,7 @@ div.csl-indent {
 <meta name="quarto:offset" content="./">
 <link href="./05-PO33Q.html" rel="next">
 <link href="./03-PO33Q.html" rel="prev">
-<link href="./images/Crest_white.png" rel="icon" type="image/png">
+<link href="./images/favicon-32.png" rel="icon" type="image/png">
 <script src="site_libs/quarto-html/quarto.js" type="module"></script>
 <script src="site_libs/quarto-html/tabsets/tabsets.js" type="module"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
@@ -791,8 +791,8 @@ Table&nbsp;3: What is left…
 
     <script>
 
-      function styleCell_v6gpb6l6rvz9zwyi6qve(i, j, css_id) {
-          var table = document.getElementById("tinytable_v6gpb6l6rvz9zwyi6qve");
+      function styleCell_5icqz0ttzlemkfglm9vn(i, j, css_id) {
+          var table = document.getElementById("tinytable_5icqz0ttzlemkfglm9vn");
           var cell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -801,8 +801,8 @@ Table&nbsp;3: What is left…
               console.warn(`Cell at (${i}, ${j}) not found.`);
           }
       }
-      function spanCell_v6gpb6l6rvz9zwyi6qve(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_v6gpb6l6rvz9zwyi6qve");
+      function spanCell_5icqz0ttzlemkfglm9vn(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_5icqz0ttzlemkfglm9vn");
         const targetCell = table.querySelector(`[data-row="${i}"][data-col="${j}"]`);
         if (!targetCell) {
           console.warn(`Cell at (${i}, ${j}) not found.`);
@@ -833,21 +833,21 @@ Table&nbsp;3: What is left…
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_39iy95w7vap76qhsbsus',}, 
-          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_eawsbdcnif37toi3woh4',}, 
-          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_0wljo66mvnfky9f13uj1',}, 
-          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_anif2cpa1tgo8djohr9r',}, 
-          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_t64a1k3vzslf0psatxo3',}, 
-          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_ilw5e7wdrpm6vsw3fbh5',}, 
-          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_4yqvs3cd57qjzcx3sfjm',}, 
-          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_1n6k9smf82gr150ta6cy',}, 
-          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_bl7cq7s8irishtm9cl8a',}, 
+          { positions: [ { i: '-1', j: 2 }, { i: '-1', j: 3 },  ], css_id: 'tinytable_css_jhs87xwd9qkfkveqqm62',}, 
+          { positions: [ { i: '6', j: 1 }, { i: '6', j: 2 }, { i: '6', j: 3 },  ], css_id: 'tinytable_css_2rrgq1yzfszva8jg7krf',}, 
+          { positions: [ { i: '1', j: 1 }, { i: '2', j: 1 }, { i: '4', j: 1 }, { i: '5', j: 1 }, { i: '2', j: 2 }, { i: '4', j: 2 }, { i: '1', j: 2 }, { i: '2', j: 3 }, { i: '3', j: 1 }, { i: '4', j: 3 }, { i: '5', j: 2 }, { i: '3', j: 2 }, { i: '1', j: 3 }, { i: '3', j: 3 }, { i: '5', j: 3 },  ], css_id: 'tinytable_css_6pxb9zh4328sxz2wfe2d',}, 
+          { positions: [ { i: '-1', j: 1 },  ], css_id: 'tinytable_css_nc0iaff7q60k2wo068xj',}, 
+          { positions: [ { i: '0', j: 1 }, { i: '0', j: 2 }, { i: '0', j: 3 },  ], css_id: 'tinytable_css_q93py74rjhe82h2uk1hc',}, 
+          { positions: [ { i: '6', j: 0 },  ], css_id: 'tinytable_css_b5u6szmqv0fi10scze5n',}, 
+          { positions: [ { i: '1', j: 0 }, { i: '2', j: 0 }, { i: '3', j: 0 }, { i: '4', j: 0 }, { i: '5', j: 0 },  ], css_id: 'tinytable_css_yiwgxeqw63d5r5z1ttaz',}, 
+          { positions: [ { i: '-1', j: 0 },  ], css_id: 'tinytable_css_u38p9r7myq7uprr5hg4b',}, 
+          { positions: [ { i: '0', j: 0 },  ], css_id: 'tinytable_css_c9ndnx5b5la31if1lmbt',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_v6gpb6l6rvz9zwyi6qve(cell.i, cell.j, group.css_id);
+                  styleCell_5icqz0ttzlemkfglm9vn(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -855,18 +855,18 @@ Table&nbsp;3: What is left…
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_39iy95w7vap76qhsbsus, .table th.tinytable_css_39iy95w7vap76qhsbsus { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_eawsbdcnif37toi3woh4, .table th.tinytable_css_eawsbdcnif37toi3woh4 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_0wljo66mvnfky9f13uj1, .table th.tinytable_css_0wljo66mvnfky9f13uj1 { text-align: center; }
-      .table td.tinytable_css_anif2cpa1tgo8djohr9r, .table th.tinytable_css_anif2cpa1tgo8djohr9r { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_t64a1k3vzslf0psatxo3, .table th.tinytable_css_t64a1k3vzslf0psatxo3 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_ilw5e7wdrpm6vsw3fbh5, .table th.tinytable_css_ilw5e7wdrpm6vsw3fbh5 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_4yqvs3cd57qjzcx3sfjm, .table th.tinytable_css_4yqvs3cd57qjzcx3sfjm { text-align: left; }
-      .table td.tinytable_css_1n6k9smf82gr150ta6cy, .table th.tinytable_css_1n6k9smf82gr150ta6cy { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_bl7cq7s8irishtm9cl8a, .table th.tinytable_css_bl7cq7s8irishtm9cl8a { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_jhs87xwd9qkfkveqqm62, .table th.tinytable_css_jhs87xwd9qkfkveqqm62 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_2rrgq1yzfszva8jg7krf, .table th.tinytable_css_2rrgq1yzfszva8jg7krf { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_6pxb9zh4328sxz2wfe2d, .table th.tinytable_css_6pxb9zh4328sxz2wfe2d { text-align: center; }
+      .table td.tinytable_css_nc0iaff7q60k2wo068xj, .table th.tinytable_css_nc0iaff7q60k2wo068xj { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_q93py74rjhe82h2uk1hc, .table th.tinytable_css_q93py74rjhe82h2uk1hc { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_b5u6szmqv0fi10scze5n, .table th.tinytable_css_b5u6szmqv0fi10scze5n { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_yiwgxeqw63d5r5z1ttaz, .table th.tinytable_css_yiwgxeqw63d5r5z1ttaz { text-align: left; }
+      .table td.tinytable_css_u38p9r7myq7uprr5hg4b, .table th.tinytable_css_u38p9r7myq7uprr5hg4b { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_c9ndnx5b5la31if1lmbt, .table th.tinytable_css_c9ndnx5b5la31if1lmbt { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_v6gpb6l6rvz9zwyi6qve" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <table class="table table-borderless" id="tinytable_5icqz0ttzlemkfglm9vn" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
         <thead>
 <tr>
 <th scope="col" align="center" colspan="1" data-row="-1" data-col="0"> </th>
