--- a/11-Quarto.html
+++ b/11-Quarto.html
@@ -286,7 +286,7 @@ window.MathJax = {
 <p>You are a professional author. Learn to use the tools of authorship or choose a profession for which you are better suited.</p>
 </blockquote>
 <p>I agree. And I wish more people, students and faculty members alike, would take note of this. The good news for you is that we will be using R on this module, and amongst the many other millions of things that this program enables us to do, it provides an interface to write with <a href="https://quarto.org/">Quarto</a>.</p>
-<p>Writing your assessment in Quarto has some very notable benefits, such as great formatting, the seamless integration of graphs and results tables you will produce for your assessment, and a semi-automatic list of references.</p>
+<p>Writing your assessment in Quarto has some very notable benefits, such as great formatting, the seamless integration of graphs and results tables that you will produce for your assessment, and a semi-automatic list of references.</p>
 <div style="height:1em;">
 
 </div>
