--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ header#title-block-header, .quarto-title-block { display: block !important; }
 <p>This online companion has two purposes: (1) it introduces you to the quantitative methods element of the module, and (2) it provides you with some exercises that we will be working through in the seminars each week. We start with an introduction to R in Week 1, and then move closer and closer to the method you will be using in the final assessment of this module: a Markov Transition Model. As such, the module also follows the methodological evolution that the democratisation literature in general, and the modernisation literature in particular have traversed since the 1950s: from linear regression to a time-series probability model.</p>
 <p>PO33Q is my flagship module and has been lauded by the external examiner as the best of its kind she had seen. A lot of work and love has gone into this module, and I hope you will enjoy taking it as much as I enjoy teaching it.</p>
 <div style="text-align: left; margin-top: 2em; margin-bottom: 1em;">
-<p><img src="files/signature_white.png" width="200" height="70" style="display: inline-block; margin-bottom: 0.5em;"> <span style="font-size: 28px; font-weight: bold; color: #e1e2ea;"><br></span></p>
+<p><img src="files/signature_white.png" width="250" style="display: inline-block; margin-bottom: 0.5em; height:auto;"> <span style="font-size: 28px; font-weight: bold; color: #e1e2ea;"><br></span></p>
 </div>
 </section>
 <section id="website-features" class="level1 unnumbered">
